[gd_scene load_steps=3 format=3 uid="uid://ccq7x2b3dj4v0"]

[ext_resource type="Script" uid="uid://biu77vrqd0ufe" path="res://Classes/UI_Screens/CustomBoards/CustomBoardOptions/custom_board_options.gd" id="1_8naip"]
[ext_resource type="Theme" uid="uid://bseckuk4rs2ug" path="res://Art/Theme/QuestionBoxTheme.tres" id="2_bdtgv"]

[node name="CustomBoardOptions" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8naip")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_bdtgv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_right = 0.9
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
theme = ExtResource("2_bdtgv")
bbcode_enabled = true
text = "[b]Custom Boards"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 50

[node name="CreateBut" type="Button" parent="VBoxContainer/Control"]
layout_mode = 2
size_flags_horizontal = 3
text = "Create New Board"

[node name="PlayBut" type="Button" parent="VBoxContainer/Control"]
layout_mode = 2
size_flags_horizontal = 3
text = "Play/Edit Board"

[node name="BackBut" type="Button" parent="VBoxContainer/Control"]
layout_mode = 2
size_flags_horizontal = 3
text = "Back"

[node name="Spacer" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8

[connection signal="pressed" from="VBoxContainer/Control/CreateBut" to="." method="_on_create_but_pressed"]
[connection signal="pressed" from="VBoxContainer/Control/PlayBut" to="." method="_on_play_but_pressed"]
[connection signal="pressed" from="VBoxContainer/Control/BackBut" to="." method="_on_back_but_pressed"]
